Changelog for pdoTools.

2.1.9 pl
==============
- [#144] [pdoParser] Leave unprocessed FastField tags so other components could parse them.

2.1.8 pl
==============
- [Fenom] Ability to use id of chunks and templates in {include} and {extends}.
- [Fenom] Added support of debugParser.
- [Fenom] Added {$_modx->getChildIds()} and {$_modx->getParentIds()}.

2.1.7 pl
==============
- Fixed work with integer values from system setting "link_tag_scheme".

2.1.6 pl
==============
- [Fenom] Updated to version 2.8.0.
- [Fenom] Improved check of syntax to process content of chunks.
- [pdoParser] Fixed E_WARNING on line 50 introduced in previous version.

2.1.5 pl
==============
- [Fenom] Fixed register of scripts and styles by cached snippets.

2.1.4 pl
==============
- [Fenom] Fixed TVs in {$_modx->resource}
- [Fenom] Added new method {$_modx->getInfo()}

2.1.3 pl
==============
- Improved work of system setting "pdotools_fenom_php".

2.1.2 pl
==============
- [Fenom] Replaced {$_modx->placeholders} to functions.

2.1.1 pl
==============
- pdoParser enabled by default.
- [Fenom] Fixed return content in {$_modx->getChunk}.
- [Fenom] Added cache for snippets called through {$_modx->runSnippet}.
- [pdoTools] Added processing of property sets for chunks.
- [pdoResources] Set additionalPlaceholders in &tplWrapper

2.1.0 pl
==============
- [Fenom] Updated Fenom to version 2.7.1.
- [Fenom] Added safe system variable {$_modx}.
- [Fenom] Added MODX template provider for chunks and templates.

2.0.5 pl
==============
- [#132] Fixed possible E_WARNING on empty chunks.
- [#122] Ability to use 3rd party pdoPage and pdoMenu classes.
- [#118] [pdoPage] Fixed parameter &offset.
- [pdoPage] Fixed default CSS classes in "empty" chunks.

2.0.4 pl
==============
- Fixed processing of "pdotools_fenom_cache" system setting.

2.0.3 pl
==============
- [#125] [pdoTitle] Fixed parameter &id.

2.0.2 pl
==============
- Improved processing of @FILE binding.

2.0.1 pl
==============