@@ -3,6 +3,7 @@ Changelog for pdoTools.
 2.1.9 pl
 ==============
 - [#144] [pdoParser] Leave unprocessed FastField tags so other components could parse them.
+- [pdoFetch] Updated syntax for "SET SQL_BIG_SELECTS = 1".
 
 2.1.8 pl
 ==============
